--- a/frontend/index.html
+++ b/frontend/index.html
@@ -84,6 +84,7 @@
           </div>
           <div id="image-name">
             <p id="databaseName">Name</p>
+            <!-- Will be updated with the name of the image -->
           </div>
           <div id="search-container">
             <input type="text" id="searchBox" placeholder="Search by name..." />
